<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schema s.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="162dp"
        android:layout_height="147dp"
        android:src="@drawable/img_insert_name"
        app:layout_constraintBottom_toTopOf="@+id/you_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/you_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qual_o_seu_nome"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:paddingHorizontal="15dp"
        android:id="@+id/yourNameInput"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_gray_transparent_input"
        android:ems="10"
        android:hint="@string/meu_nome"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#4A4A4A"
        app:layout_constraintEnd_toEndOf="@+id/you_name"
        app:layout_constraintStart_toStartOf="@+id/you_name"
        app:layout_constraintTop_toBottomOf="@+id/you_name"
        android:autofillHints="João, Marcos, José" />


    <Button
        android:id="@+id/next"
        android:layout_width="129dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_red_button"
        android:text="@string/pr_ximo"
        app:layout_constraintEnd_toEndOf="@+id/you_name"
        app:layout_constraintStart_toStartOf="@+id/you_name"
        app:layout_constraintTop_toBottomOf="@+id/yourNameInput" />

</androidx.constraintlayout.widget.ConstraintLayout>