<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemon_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_rounded_white"
    tools:context=".PokemonActivity">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gif_loading"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img_loading"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pokemon_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/pokemon_icon"
            android:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/pikachu" />

        <TextView
            android:id="@id/pokemon_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pokemon_icon"
            tools:text="@string/pikachu" />

        <TextView
            android:id="@id/pokemon_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/pokemon_name"
            app:layout_constraintStart_toStartOf="@+id/pokemon_name"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_name"
            tools:text="@string/_001" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_id"
            app:tabBackground="@drawable/tab_background_selector"
            app:tabIndicatorHeight="0dp"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/TextStyleTAB"
            app:tabTextColor="@color/black" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/tabLayout"
            app:layout_constraintStart_toStartOf="@id/tabLayout"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>