<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:minHeight="500dp"
    tools:context=".Stats">

    <!-- STATS -->

    <TextView
        android:id="@+id/txtHp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/hp"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHpValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/txtHp"
        app:layout_constraintTop_toTopOf="@+id/txtHp" />

    <ProgressBar
        android:id="@+id/progressBarHp"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        android:layout_marginHorizontal="20dp"
        android:max="100"
        tools:progress="45"
        app:layout_constraintBottom_toBottomOf="@+id/txtHpValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtHpValue"
        app:layout_constraintTop_toTopOf="@+id/txtHpValue" />

    <TextView
        android:id="@+id/txtAtk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/atk"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHp"
        app:layout_constraintStart_toStartOf="@+id/txtHp"
        app:layout_constraintTop_toBottomOf="@+id/txtHp" />

    <TextView
        android:id="@+id/txtAtkValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHpValue"
        app:layout_constraintTop_toTopOf="@+id/txtAtk" />

    <ProgressBar
        android:id="@+id/progressBarAtk"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        android:layout_marginHorizontal="20dp"
        android:max="100"
        tools:progress="45"
        app:layout_constraintBottom_toBottomOf="@+id/txtAtk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAtkValue"
        app:layout_constraintTop_toTopOf="@+id/txtAtkValue" />
    <TextView
        android:id="@+id/txtDef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/def"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHp"
        app:layout_constraintStart_toStartOf="@+id/txtAtk"
        app:layout_constraintTop_toBottomOf="@+id/txtAtk" />

    <TextView
        android:id="@+id/txtDefValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHpValue"
        app:layout_constraintTop_toTopOf="@+id/txtDef" />

    <ProgressBar
        android:id="@+id/progressBarDef"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        android:layout_marginHorizontal="20dp"
        android:max="100"
        tools:progress="45"
        app:layout_constraintBottom_toBottomOf="@+id/txtDef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtDefValue"
        app:layout_constraintTop_toTopOf="@+id/txtDefValue" />
    <TextView
        android:id="@+id/txtSatk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/satk"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHp"
        app:layout_constraintStart_toStartOf="@+id/txtAtk"
        app:layout_constraintTop_toBottomOf="@+id/txtDef" />

    <TextView
        android:id="@+id/txtSatkValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHpValue"
        app:layout_constraintTop_toTopOf="@+id/txtSatk" />

    <ProgressBar
        android:id="@+id/progressBarSatk"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        android:layout_marginHorizontal="20dp"
        android:max="100"
        tools:progress="45"
        app:layout_constraintBottom_toBottomOf="@id/txtSatk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtSatkValue"
        app:layout_constraintTop_toTopOf="@id/txtSatkValue" />

    <TextView
        android:id="@+id/txtSdef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/sdef"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHp"
        app:layout_constraintStart_toStartOf="@+id/txtAtk"
        app:layout_constraintTop_toBottomOf="@+id/txtSatk" />

    <TextView
        android:id="@+id/txtSdefValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHpValue"
        app:layout_constraintTop_toTopOf="@+id/txtSdef" />

    <ProgressBar
        android:id="@+id/progressBarSdef"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        android:layout_marginHorizontal="20dp"
        android:max="100"
        tools:progress="45"
        app:layout_constraintBottom_toBottomOf="@id/txtSdef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtSdefValue"
        app:layout_constraintTop_toTopOf="@id/txtSdefValue" />
    <TextView
        android:id="@+id/txtSpd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/spd"
        android:textColor="@color/blue_700"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHp"
        app:layout_constraintStart_toStartOf="@+id/txtAtk"
        app:layout_constraintTop_toBottomOf="@+id/txtSdef" />

    <TextView
        android:id="@+id/txtSpdValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="000"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/txtHpValue"
        app:layout_constraintTop_toTopOf="@+id/txtSpd" />

    <ProgressBar
        android:id="@+id/progressBarSpd"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        android:layout_marginHorizontal="20dp"
        android:max="100"
        tools:progress="45"
        app:layout_constraintBottom_toBottomOf="@id/txtSpd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtSpdValue"
        app:layout_constraintTop_toTopOf="@id/txtSpdValue" />



    <!-- WEAKNESSES -->

    <TextView
        android:id="@+id/txtWeaknesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBarSpd"
        android:text="@string/fraquezas"
        android:textColor="@color/blue_700"
        android:textSize="28sp"
        android:layout_marginTop="40dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcWeaknesses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/weakness_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWeaknesses" />

</androidx.constraintlayout.widget.ConstraintLayout>